feat: enhance agent guidelines and implement branch cleanup
- Updated AGENTS.md to include comprehensive guidelines on feature implementation, building, testing, and code style.
- Introduced a new `branch_cleanup` configuration option to manage local and remote branch deletion after merges.
- Added rollback command to revert direct merges, ensuring safer code management.
- Enhanced validation for story completion to include acceptance criteria checks, providing warnings and errors during the implementation phase.

This commit improves the overall structure and usability of the Wreckit CLI, ensuring better adherence to coding standards and project management practices.

--- a/specs/009-cli.md
+++ b/specs/009-cli.md
@@ -286,15 +286,34 @@ Errors are logged via the logger:
 
 ---
 
+## Implementation Status
+
+| Feature | Status | Notes |
+|---------|--------|-------|
+| **Core commands** | ✅ Implemented | `wreckit`, `next`, `run`, `ideas`, `status`, `list`, `show` |
+| **Phase commands** | ✅ Implemented | `research`, `plan`, `implement`, `pr`, `complete` |
+| **Utility commands** | ✅ Implemented | `init`, `doctor`, `sdk-info` |
+| **Global flags** | ✅ Implemented | All flags in spec |
+| **Command-specific flags** | ✅ Implemented | `--file`, `--json`, `--state`, `--force`, `--fix` |
+| **ID resolution** | ✅ Implemented | Full ID, numeric prefix, slug suffix |
+| **Onboarding** | ✅ Implemented | See `src/onboarding.ts` |
+| **JSON output** | ✅ Implemented | `--json` flag for status/list/show |
+| **Debug output (NDJSON)** | ✅ Implemented | `--debug` flag |
+| **TUI mode** | ✅ Implemented | See `src/tui/` |
+| **Dry-run mode** | ✅ Implemented | `--dry-run` flag |
+| **Interrupt handling** | ✅ Implemented | SIGINT/SIGTERM → exit 130 |
+| **Exit codes** | ✅ Implemented | 0, 1, 130 |
+| **Parallel execution** | ✅ Implemented | `--parallel <n>` flag |
+
+---
+
 ## Known Gaps
 
-### Gap 1: No Parallel Execution
+### Gap 1: No Parallel Execution ✅ FIXED
 
-Batch commands process items sequentially. No built-in parallelism.
+~~Batch commands process items sequentially. No built-in parallelism.~~
 
-**Impact:** Slow for large backlogs.
-
-**Fix:** Add `--parallel <n>` flag for concurrent processing.
+**Status:** Fixed - `--parallel <n>` flag implemented. See `orchestrateAll` in `src/commands/orchestrator.ts`.
 
 ### Gap 2: No Progress Persistence
 
@@ -302,7 +321,7 @@ Batch progress is not persisted. Ctrl-C loses position in queue.
 
 **Impact:** Must rescan and filter on resume.
 
-**Fix:** Track current item in index or separate state file.
+**Status:** Open - No progress persistence implemented.
 
 ### Gap 3: Ambiguous ID Resolution
 
@@ -310,7 +329,7 @@ Slug suffix matching can be ambiguous if multiple items share suffix.
 
 **Impact:** Wrong item selected.
 
-**Fix:** Return error on ambiguous match instead of first match.
+**Status:** Open - Still returns first match on ambiguous suffix.
 
 ---
 
